@@ -134,8 +134,8 @@ protected:
 	void MakeUI();
 	static void OnNewCon(GtkMenuItem* mitem, CMainFrame* _this);
 	static void OnQuit(GtkMenuItem* mitem, CMainFrame* _this);
-	static void OnFullscreenMode(GtkToggleAction* action, CMainFrame* _this);
-	static void OnSimpleMode(GtkToggleAction* action, CMainFrame* _this);
+	static void OnFullscreenMode(GtkMenuItem* mitem, CMainFrame* _this);
+	static void OnSimpleMode(GtkMenuItem* mitem, CMainFrame* _this);
 	void LoadIcons();
 	void LoadStartupSites();
 	static void OnJumpToPage(GObject* obj, CMainFrame* _this);
@@ -208,6 +208,9 @@ protected:
 	static CMainFrame* g_pMyself;
 	static GtkActionEntry m_ActionEntries[];
 	static GtkToggleActionEntry m_ToggleActionEntries[];
+
+private:
+	enum {NORMAL_MODE, FULLSCREEN_MODE, SIMPLE_MODE} m_Mode;
 };
 
 #endif
