@@ -1,3 +1,8 @@
+2008-04-11  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
+
+	* src/mainframe.cpp
+	src/mainframe.h: Polish the switch between normal/fullscreen/simple mode.
+
 2008-04-06  Jim Huang  <jserv.tw@gmail.com>
 
 	* src/mainframe.cpp (ui_info):
